<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_home"
        android:enabled="true"
        android:icon="@drawable/selector_home"
        android:title="@string/title_home"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_explore"
        android:enabled="true"
        android:icon="@drawable/selector_explore"
        android:title="@string/title_explore"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_favorite"
        android:enabled="true"
        android:icon="@drawable/selector_favorite"
        android:title="@string/title_favorite"
        app:showAsAction="ifRoom|withText" />
</menu>
